--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ Easy Profile Template
 http://www.templatemo.com/tm-467-easy-profile
 -->
 	<!-- stylesheet css -->
+	<link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
+ 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/templatemo-blue.css">
