--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ http://www.templatemo.com/tm-467-easy-profile
 		</div>
 		<div class="col-md-6 col-sm-12">
 			<div class="languages">
-				<h2>Languages/Programming/Tools</h2>
+				<h2>Languages / Tools</h2>
 					<ul>
 						<li>Tamil/English</li>
 						<li>French*/German*</li>
@@ -114,7 +114,7 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="contact">
 				<h2>Contact</h2>
 					<p><i class="fa fa-map-marker"></i> PN Road, Tirupur - 641 602</p>
-					<p><i class="fa fa-phone"></i> +91 7358605231</p>
+					<p><i class="fa fa-phone"></i> +91 confidential</p>
 					<p><i class="fa fa-envelope"></i> mktmanohar1999@gmail.com</p>
 			</div>
 		</div>
@@ -147,6 +147,7 @@ http://www.templatemo.com/tm-467-easy-profile
 					<li><a href="https://twitter.com/KirubaThomas?s=09" class="fa fa-twitter"></a></li>
 					<li><a href="https://github.com/KirubaThomasM" class="fa fa-github"></a></li>
 					<li><a href="mailto:mktmanohar1999@gmail.com" class="fa fa-envelope"></a></li>
+					<li><a href="https://www.linkedin.com/in/kiruba-thomas-manohar-178a841b1" class="fa fa-linkedin"></a></li>
 				</ul>
 			</div>
 		</div>
